# py-cli-spinner

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_cli_spinner/: __init__.py
tests/: test_cli_spinner.py  test_import.py
