[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-cli-spinner"
version = "0.1.3"
description = "Dead-simple terminal spinners and progress indicators for CLI scripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["spinner", "cli", "terminal", "progress", "loading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-cli-spinner"
Repository = "https://github.com/philiprehberger/py-cli-spinner"
Issues = "https://github.com/philiprehberger/py-cli-spinner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_cli_spinner"]
